fixed the layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   background-color: #F1F1F1;
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
 }
 
 @layer base {
@@ -37,5 +38,13 @@
   }
   .foundersGrotesk2 {
    font-family: 'FoundersGrotesk2';
+  }
+
+  .containerWrapper {
+    width: 100%;
+    padding: 1rem 3rem;
+  }
+  .h1 {
+    font-size: 9rem;
   }
 }
